CheckMATE - Changelog
Ver 2.0.34
---------
2021-11-17   Jong Soo Kim <jsk@th.physik.uni-bonn.de>
	~ bugfix for atlas_2004_10894

2021-10-06   Jong Soo Kim <jsk@th.physik.uni-bonn.de>
        
	~ added atlas_1502_05686, atlas_2103_11684, atlas_2004_10894, atlas_2106_09609
	atlas_1911_06660

	
Ver 2.0.32
---------
2021-08-23   Krzysztof Rolbiecki <krolb@fuw.edu.pl>

    ~ added atlas_phys_2014_007
    ~ fixed problem with 14 YeV .tcl card

Ver 2.0.31
---------
2021-08-20   Krzysztof Rolbiecki <krolb@fuw.edu.pl>

    ~ added atlas_1807_07447

Ver 2.0.30
---------
2021-07-16   Krzysztof Rolbiecki <krolb@fuw.edu.pl>

    ~ added atlas_1911_12606

Ver 2.0.29
---------
2021-03-14   Arran Freegard <acf1g14@soton.ac.uk>
        
    ~ added atlas_1403_5294 and atlas_higg_2013_03

	
Ver 2.0.28
---------
2021-02-10   Krzysztof Rolbiecki <krolb@fuw.edu.pl>
        
    ~ added atlas_2101_01629

Ver 2.0.28
---------
2020-11-03   Krzysztof Rolbiecki <krolb@fuw.edu.pl>
        
    ~ added atlas_conf_2018_041


2020-09-27   Manimala Chakraborti, Ipsita Saha
    ~ added atlas_1803_02762

	

Ver 2.0.27
---------
2020-09-27   Manimala Chakraborti, Ipsita Saha
    ~ added atlas_conf_2019_020
	
2020-04-08   Krzysztof Rolbiecki <krolb@fuw.edu.pl>

    ~ removed python Root check due to a change in naming conventions (python->pyroot) around v6.20 


Ver 2.0.26
---------
        
2018-04-16   Krzysztof Rolbiecki <krolb@fuw.edu.pl>
        
    ~ fixed center-of-mass energy setting and unifying lepton isolation

Ver 2.0.25
---------

2018-04-16   Jong Soo Kim <jsk@th.physik.uni-bonn.de>
        
    ~ added atlas_1804_03602



	
Ver 2.0.24
---------
        
2018-03-28   Krzysztof Rolbiecki <krolb@fuw.edu.pl>
        
    ~ added atlas_1706_03731

Ver 2.0.23
---------
        
2018-03-28   Jong Soo Kim <jsk@th.physik.uni-bonn.de>
        
    ~ fixed missing files in atlas_1507_05493  

	
Ver 2.0.23
---------
        
2018-03-21   Jong Soo Kim <jsk@th.physik.uni-bonn.de>
        